--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,10 @@
         "psr-4": {
             "League\\UrbanDictionary\\":"src"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "League\\UrbanDictionary\\Tests\\":"tests"
+        }
     }
 }
