--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,25 @@
 {
+    "name": "league/urban-dictionary",
+    "description": "Make your dictionary of slangs.",
+    "keywords": [
+        "league",
+        "urban-dictionary"
+    ],
+    "homepage": "https://github.com/andela-oogunjimi/Urban-Dictionary",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Ogunjimi Opeyemi Abiodun",
+            "email": "opeyemi.ogunjimi@andela.com",
+            "role": "Software Developer"
+        }
+    ],
+    "require": {
+        "php" : ">=5.6.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit" : "5.*"
+    },
     "autoload": {
         "psr-4": {
             "League\\UrbanDictionary\\":"src"
@@ -8,5 +29,8 @@
         "psr-4": {
             "League\\UrbanDictionary\\Tests\\":"tests"
         }
+    },
+    "scripts": {
+        "test": "phpunit"
     }
 }
